--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-inview": "^4.0.0",
+		"swiper": "^9.2.3",
 		"tailwindcss": "^3.3.1",
 		"tailwindcss-animated": "^1.0.0",
 		"tslib": "^2.4.1",
