--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"gsap": "^3.11.5",
+		"smooth-scrollbar": "^8.8.3"
+	}
 }
