--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"prettier-plugin-tailwindcss": "^0.2.7",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-image-comparison": "^0.0.3",
 		"svelte-inview": "^4.0.0",
 		"svelte-markdown": "^0.2.3",
 		"swiper": "^9.2.3",
