--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 		"beavers:lint": "yarn format && yarn lint"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-vercel": "^2.4.2",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-vercel": "^6.3.1",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -25,10 +26,10 @@
 		"luxon": "^3.4.4",
 		"postcss": "^8.4.22",
 		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.2.7",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
 		"svelte-image-comparison": "^0.0.3",
 		"svelte-inview": "^4.0.0",
 		"svelte-markdown": "^0.2.3",
@@ -37,7 +38,7 @@
 		"tailwindcss-animated": "^1.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
